apps/Arm/everparse_modbus_bidirection/network_config/iptables-qemu-gateway-working.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Oct 10 10:20:30 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -i tap1 -o ens256 -j ACCEPT
-A FORWARD -i tap0 -o ens224 -j ACCEPT
-A FORWARD -i ens256 -o tap1 -j ACCEPT
-A FORWARD -i ens224 -o tap0 -j ACCEPT
-A FORWARD -i ens256 -o ens224 -j DROP
-A FORWARD -i ens224 -o ens256 -j DROP
COMMIT
# Completed on Fri Oct 10 10:20:30 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Oct 10 10:20:30 2025
*nat
:PREROUTING ACCEPT [15922:985447]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [16064:966395]
-A PREROUTING -d 192.168.96.2/32 -i ens224 -p tcp -m tcp --dport 502 -j DNAT --to-destination 10.2.0.2:502
-A PREROUTING -d 192.168.95.1/32 -i ens256 -p tcp -m tcp --dport 502 -j DNAT --to-destination 10.3.0.2:502
-A POSTROUTING -s 10.2.0.0/24 -o ens224 -j SNAT --to-source 192.168.96.2
-A POSTROUTING -s 10.3.0.0/24 -o ens256 -j SNAT --to-source 192.168.95.1
COMMIT
# Completed on Fri Oct 10 10:20:30 2025
